--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,11 @@
+<!--<img src="LogoWebsiteSnippingTOOL.png" alt="TutorsOnlinePro" id = "logo">-->
+<!--  Website Logo -->
+<%=image_tag("LogoWebsiteSnippingTOOL.png")%>
+
+
 <h1>Home#index</h1>
 <p>Find me in app ROX/views/home/index.html.erb</p>
+
+
+
+
